--- a/index.html
+++ b/index.html
@@ -37,25 +37,20 @@
                     </p>
                 </section>
                 <section class="members">
-                    <table>
+                    <h2>Members</h2>
+                    <p>There is currently <span id="member-count"></span> members in the webring.</p>
+                    <table class="member-table">
                         <thead>
                             <tr>
                                 <th></th>
                                 <th>Website</th>
                                 <th>Name</th>
                                 <th>Program</th>
+                                <th>Year</th>
                                 <th>Degree</th>
                             </tr>
                         </thead>
-                        <tbody class="member-list">
-                            <tr>
-                                <td><a href="https://thomasnewman.ca"><img src="https://thomasnewman.ca/favicon.ico"></a></td>
-                                <td><a href="https://thomasnewman.ca" target="_blank" rel="noopener noreferrer">thomasnewman.ca</a></td>
-                                <td>Thomas Newman</td>
-                                <td>CompE</td>
-                                <td>BEng</td>
-                            </tr>
-                        </tbody>
+                        <tbody class="member-list"></tbody>
                     </table>
                 </section>
                 <section class="what">
@@ -63,7 +58,7 @@
                     <p>A webring is a collection of websites linked together in a circular structure. In the early days of the web, webrings were a popular way to discover related websites.</p>
                 </section>
             </main>
-            <footer >
+            <footer>
                 <p class="footer">Last updated: June 15, 2025 5:13:07 PM<br>© 2025 Thomas Newman, Hosted on Github Pages</p>
             </footer>
             
