--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <section class="members">
                     <h2>Members</h2>
                     <p>There is currently <span id="member-count"></span> members in the webring.</p>
+                    <div class="member-background">
                     <table class="member-table">
                         <thead>
                             <tr>
@@ -52,6 +53,8 @@
                         </thead>
                         <tbody class="member-list"></tbody>
                     </table>
+                    <div class="arrow-bar"></div>
+                    </div>
                 </section>
                 <section class="what">
                     <h2>What is a webring?</h2>
