--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
                         </thead>
                         <tbody class="member-list"></tbody>
                     </table>
-                    <div class="arrow-bar"></div>
+                    <div class="arrow-bar">
+                        <button class="arrow left">←</button>
+                        <span class="page-number">1</span>
+                        <button class="arrow right">→</button>
+                    </div>
                     </div>
                 </section>
                 <section class="what">
@@ -62,7 +66,7 @@
                 </section>
             </main>
             <footer>
-                <p class="footer">Last updated: June 15, 2025 5:13:07 PM<br>© 2025 Thomas Newman, Hosted on Github Pages</p>
+                <p class="footer">Last updated: August 14, 2025 9:46:42 PM<br>© 2025 Thomas Newman, Hosted on Github Pages</p>
             </footer>
             
         </body>
