--- a/index.html
+++ b/index.html
@@ -40,24 +40,24 @@
                     <h2>Members</h2>
                     <p>There is currently <span id="member-count"></span> members in the webring.</p>
                     <div class="member-background">
-                    <table class="member-table">
-                        <thead>
-                            <tr>
-                                <th></th>
-                                <th>Website</th>
-                                <th>Name</th>
-                                <th>Program</th>
-                                <th>Year</th>
-                                <th>Degree</th>
-                            </tr>
-                        </thead>
-                        <tbody class="member-list"></tbody>
-                    </table>
-                    <div class="arrow-bar">
-                        <button class="arrow left">←</button>
-                        <span class="page-number">1</span>
-                        <button class="arrow right">→</button>
-                    </div>
+                        <table class="member-table">
+                            <thead>
+                                <tr>
+                                    <th></th>
+                                    <th id="website">Website</th>
+                                    <th id="name">Name</th>
+                                    <th id="program">Program</th>
+                                    <th id="year">Year</th>
+                                    <th id="degree">Degree</th>
+                                </tr>
+                            </thead>
+                            <tbody class="member-list"></tbody>
+                        </table>
+                        <div class="arrow-bar">
+                            <button class="arrow left" id="left">←</button>
+                            <span class="page-number">1</span>
+                            <button class="arrow right" id="right">→</button>
+                        </div>
                     </div>
                 </section>
                 <section class="what">
