--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <h2>Members</h2>
                     <p>There is currently <span id="member-count"></span> members in the webring.</p>
                     <div class="member-background">
+                        <input type="text" placeholder="Search members...">
                         <table class="member-table">
                             <thead>
                                 <tr>
