Searching fully operational

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h2>Members</h2>
                     <p>There is currently <span id="member-count"></span> members in the webring.</p>
                     <div class="member-background">
-                        <input type="text" placeholder="Search members...">
+                        <input type="text" placeholder=" Search members..." class="searchBar">
                         <table class="member-table">
                             <thead>
                                 <tr>
