Better data + icon

--- a/index.html
+++ b/index.html
@@ -3,23 +3,26 @@
         <head>
             <meta charset="utf-8">
             <title>YorkU Webring</title>
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
             <meta name="description" content="A webring for the benefit of all students or alumni of York University.">
+            <link rel="icon" href="/images/yorkuicon.png" type="image/png">
             <link rel="stylesheet" href="styles.css">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap">
         </head>
         
+        
         <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-3ZDZDL4K19"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-X7NHL6Q9SZ"></script>
         <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-3ZDZDL4K19');
+        gtag('config', 'G-X7NHL6Q9SZ');
         </script>
+
 
         <body>
             <script src="scripts/front.js"></script>
