--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
     <html lang="en" data-theme="dark">
         <head>
             <meta charset="utf-8">
-            <title>YorkU Webring</title>
+            <title>YorkU WebRing</title>
             <meta name="viewport" content="width=device-width, initial-scale=1">
-            <meta name="description" content="A webring for the benefit of all students or alumni of York University.">
+            <meta name="description" content="A WebRing for the benefit of all students or alumni of York University.">
             <link rel="icon" href="/images/yorkuicon.png" type="image/png">
             <link rel="stylesheet" href="styles.css">
             <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,8 +28,8 @@
             <script src="scripts/front.js"></script>
             <canvas id="background-canvas" style="display: none; width: 611px; height: 951px;" width="611" height="951"></canvas>
             <header>
-                <h1>YorkU Webring</h1>
-                <p>This is a webring exclusive to York University Engineering students and the surrounding community.</p>
+                <h1>YorkU </h1>
+                <p>This is a WebRing exclusive to York University Engineering students and the surrounding community.</p>
                 <hr>
             </header>
             <main>
@@ -41,7 +41,7 @@
                 </section>
                 <section class="members">
                     <h2>Members</h2>
-                    <p>There is currently <span id="member-count"></span> members in the webring.</p>
+                    <p>There is currently <span id="member-count"></span> members in the WebRing.</p>
                     <div class="member-background">
                         <input type="text" placeholder=" Search members..." class="searchBar">
                         <table class="member-table">
@@ -65,8 +65,8 @@
                     </div>
                 </section>
                 <section class="what">
-                    <h2>What is a webring?</h2>
-                    <p>A webring is a collection of websites linked together in a circular structure. In the early days of the web, webrings were a popular way to discover related websites.</p>
+                    <h2>What is a WebRing?</h2>
+                    <p>A WebRing is a collection of websites linked together in a circular structure. In the early days of the web, WebRings were a popular way to discover related websites.</p>
                 </section>
             </main>
             <footer>
