--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <script src="scripts/front.js"></script>
             <canvas id="background-canvas" style="display: none; width: 611px; height: 951px;" width="611" height="951"></canvas>
             <header>
-                <h1>YorkU </h1>
+                <h1>YorkU WebRing</h1>
                 <p>This is a WebRing exclusive to York University Engineering students and the surrounding community.</p>
                 <hr>
             </header>
