--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
             <h1 class="large">YorkU WebRing</h1>
             <button onclick="updateTheme()" class="theme-toggle"><img src="/images/dark-theme-icon.png" alt="Toggle Theme"></button>
             <p>This is a WebRing exclusive to York University Engineering students and the surrounding community.</p>
+            <embed
+                src="https://webring.thomasnewman.ca/webring-widget.html"
+                width="340"
+                height="140"
+                style="border:0; max-width:100%;"
+                loading="lazy"
+                />
             <hr>
         </header>
         <main>
