Arrow bar update + widget styling fix

--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
         <header>
             <h1 class="large">YorkU WebRing</h1>
             <button onclick="updateTheme()" class="theme-toggle"><img src="/images/dark-theme-icon.png" alt="Toggle Theme"></button>
-            <p>This is a WebRing exclusive to York University Engineering students and the surrounding community.</p>
+            <p style="padding-bottom: 10px;">This is a WebRing exclusive to York University Engineering students and the surrounding community.</p>
             <embed
                 src="https://webring.thomasnewman.ca/webring-widget.html"
-                width="340"
-                height="140"
-                style="border:0; max-width:100%;"
+                width="320"
+                height="75"
+                style="max-width:100%; border-radius: 8px;"
                 loading="lazy"
+                class="widget"
                 />
             <hr>
         </header>
