--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
         <script src="scripts/front.js"></script>
         <canvas id="background-canvas" style="display: none; width: 611px; height: 951px;" width="611" height="951"></canvas>
         <header>
-            <h1 class="large">YorkU WebRing</h1>
-            <button onclick="updateTheme()" class="theme-toggle"><img src="/images/dark-theme-icon.png" alt="Toggle Theme"></button>
+            <div class="header-container">
+                <h1 class="large">YorkU WebRing</h1>
+                <button onclick="updateTheme()" class="theme-toggle"><img src="/images/dark-theme-icon.png" alt="Toggle Theme"></button>
+            </div>
             <p style="padding-bottom: 10px;">This is a WebRing exclusive to York University Engineering students and the surrounding community.</p>
             <embed
-                src="https://webring.thomasnewman.ca/webring-widget.html"
+                src="/webring-widget.html?theme=dark"
                 width="320"
                 height="75"
                 style="max-width:100%; border-radius: 8px;"
