--- a/webring-widget.html
+++ b/webring-widget.html
@@ -6,16 +6,16 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <style>
 :root {
-  --bg:#1e1e1e;
+  --bg:#1a1a1a;
   --fg:#e5e5e5;
   --accent:#86b9b0;
   --border:#3a3a3a;
   --font:"JetBrains Mono", "Roboto", monospace;
 }
 :root.light {
-  --bg:#f2f2f2;
+  --bg:#e5e5e5;
   --fg:#272727;
-  --accent:#79464f;
+  --accent:#b36775;
   --border:#c9c9c9;
 }
 * { box-sizing:border-box; font-family:var(--font); transition: color 0.3s ease;}
