Sorting actually fixed this time, and improved

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <h2 class="medium">Members</h2>
                 <p>There is currently <span id="member-count"></span> members in the WebRing.</p>
                 <div class="member-background">
-                    <input type="text" placeholder=" Search members..." class="searchBar">
+                    <input type="text" placeholder=" Search for..." class="searchBar">
                     <div class="member-container">
                         <table class="member-table">
                             <thead>
